# snowflake

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: docs.yml  rust.yml
src/: generator.rs  hashcode.rs  infras.rs  lib.rs  macros.rs  tests.rs
