[package]
name = "snowflaker"
version = "0.3.1"
edition = "2021"

authors = ["photowey <photowey@gmail.com>"]
license = "Apache-2.0"

documentation = "https://docs.rs/snowflaker"
repository = "https://github.com/photowey/snowflake"
homepage = "https://github.com/photowey/snowflake"

description = """
A Twitter snowflake algorithm simply implemented in Rust.
"""

readme = "README.md"
keywords = ["snowflake"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
chronounit = "0.2"
ifcfg = "0.1"

[features]
dynamic = []

[package.metadata.docs.rs]
features = ["dynamic"]